--- a/lab1/portfolio/index.html
+++ b/lab1/portfolio/index.html
@@ -37,7 +37,7 @@ in html
         <main>
             
             <figure id="me">
-                <img src="img/juan_doe.png" alt="Picture of John Doe" />
+                <img src="img/me.png" alt="Picture of John Doe" />
             </figure>
             
             <div id="welcomeText">
