--- a/lab1/portfolio/about.html
+++ b/lab1/portfolio/about.html
@@ -51,7 +51,7 @@ in html
             <td>2</td>
         </tr>
         <tr class="table-row">
-            <td>PHP</td>
+            <td>Python</td>
             <td>1</td>
         </tr>
     </table>
@@ -60,7 +60,7 @@ in html
     <li><span class="hobby">Video Games</span>: Rocket League</li> 
     <li><span class="hobby">Sports</span>: Tennis</li>
     <li><span class="hobby">Music</span>: Rock/Rap/Alternative</li>
-    <li><span class="hobby">Programming</span>: lul</li>
+    <li><span class="hobby">Programming</span>: all day every day</li>
 </ul>
         <!-- This is the footer -->
         <!-- The footer goes inside the body but not always -->
